improved many debugging messages to enable better debugging of https://bugzilla.gnome.org/show_bug.cgi?id=704108

git-svn-id: svn://svn.code.sf.net/p/bluefish/code/trunk/bluefish@8136 7640d186-872a-4c71-b7b2-a5696852cc35