src/bftextview2_private.h
@@ -41,7 +41,7 @@ extern void g_none(char *first, ...);
 
 #define DBG_MSG DBG_NONE
 #define DBG_SCANCACHE DBG_NONE
-#define DBG_SCANNING DBG_NONE
+#define DBG_SCANNING g_print
 #define DBG_BLOCKMATCH DBG_NONE
 #define DBG_PATCOMPILE DBG_NONE
 #define DBG_SIGNALS DBG_NONE
